Refactored diagnostic functions to be more user friendly

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
   - Parallelise main simulation loop
   - Have predict_survival_probability.survregmin not require factors to manually have their original levels added
-  - Provide simulated data set with cure fraction
+  - Rename incidence function to remove any potential confusion with incidence models
 
