--- a/vignettes/diagnostics.Rmd
+++ b/vignettes/diagnostics.Rmd
@@ -19,6 +19,7 @@ First, we will inspect the consistency of incidence data between years of the re
 ```{r setup, message = FALSE, warning = FALSE, echo=F}
 library(rprev)
 library(survival)
+library(ggplot2)
 data(prevsim)
 ```
 
@@ -63,10 +64,14 @@ Alongside the p-values from the over/under dispersion test, `rprev` provides vis
 plot(inc)
 ```
 
-Another function used to describe the incident cases is `incidence_age_distribution`, which simply plots the distribution of incident cases by age.
+Another useful diagnostic is to look at the age distribution of the incident cases.
 
 ```{r incidenceage, fig.width = 7, fig.height = 4, error = TRUE}
-incidence_age_distribution(prevsim$age)
+ggplot(prevsim, aes(age, y=..count..)) +
+    geom_line(stat='density') +
+    xlim(0, 100) +
+    labs(x='Age (years)', y='Number incident cases') +
+    theme_bw()
 ```
 
 
@@ -97,8 +102,7 @@ It is also a useful diagnostic aid to plot the survival curve for each year of t
 plot(km, lwd=2, col="blue", mark.time=F, conf.int=T, xlab="Days", 
      ylab="Survival probability")
 num_reg_years <- 9
-registry_years <- determine_yearly_endpoints(date='2004-01-30', 
-                                             num_years=num_reg_years)
+registry_years <- sapply(0:9, function(x) as.Date(paste0(2004+x, "-01-30")))
 sapply(seq(num_reg_years),
        function(i) lines(survfit(Surv(time, status) ~ 1, 
                                  data=prevsim[prevsim$entrydate >= 
@@ -128,10 +132,34 @@ cox.zph(cx)
 
 ## Functional form of age
 
-`functional_form_age()` is provided so that the user can further investigate if modelling the effect of age as linear is appropriate. This function fits a Cox model to the data with a restricted cubic spline with the specified degrees of freedom. The model is returned by the function as an `rms::cph object`, allowing the user to inspect the fit. The function can also plot relative hazard as a function of age with the `plot_fit` argument.
+Often, it can be a rather tenuous assumption that age has a linear effect on log-hazard. We recommend investigating whether a non-linear functional form provides a more appropriate fit. In particular, the `rms` package provides the `cph` function to fit a Cox model, to which restricted cubic splines can be placed on covariates using `rcs` as demonstrated below. Plotting log hazard as a function of age provides a visual means of assesing model fit, to be used alongside inspection of the model coefficients.
 
-```{r ageform2, fig.width = 7, fig.height = 4, error = TRUE}
-functional_form_age(Surv(time, status) ~ age, prevsim, df=4, plot_fit=T)
+```{r ageform3, fig.width = 7, fig.height = 4, error = TRUE}
+library(rms)
+mod_spline <- cph(Surv(time, status) ~ rcs(age, df=4), prevsim, x=TRUE, y=TRUE, surv=TRUE, time.inc=1)
+
+# Calculates log hazard linear predictor at 100 linearly separated ages between the limits
+# in the registr data
+age_range <- seq(min(prevsim$age), max(prevsim$age), length.out=100)
+preds <- predict(mod_spline, newdata=age_range, se.fit=T)
+preds_df <- as.data.frame(preds) %>%
+                rename(lp=linear.predictors, se=se.fit) %>%
+                mutate(age = age_range,
+                       upper = lp + 2 * se,
+                       lower = lp - 2 * se)
+
+ggplot(preds_df, aes(x=age, y=lp)) +
+    geom_ribbon(aes(ymin=lower, ymax=upper),
+                     colour='#d2d2d2', alpha=0.30) +
+    geom_line(colour='#0080ff', size=1.2) +
+    theme_bw() +
+    labs(x='Age', y='Log relative hazard')
+```
+
+For example, in this situation there isn't enough evidence to suggest a non-linear effect provides a better model fit over just a linear relationship.
+
+```{r}
+mod_spline
 ```
 
 # Prevalence estimates
