--- a/inst/doc/diagnostics.Rmd
+++ b/inst/doc/diagnostics.Rmd
@@ -12,44 +12,39 @@ vignette: >
 
 # Introduction
 
-The [user guide](user_guide.html) highlighted the basic use of the prevalence simulation methodology, highlighting that the prevalence process is a result of two distinct processes: incidence and survival. The package allows for custom specification of both of these systems, and provides default implementations that do not rely on strict assumptions about the data and work well in many situations. This vignette acts as a guide to assessing the modelling assumptions made when using these default models, illustrating how the diagnostics provided with the package are used to check the validity of the assumptions that are made for simulation, and checking the agreement between observed and simulated prevalence estimates.
+The [user guide](user_guide.html) highlighted the basic use of the prevalence simulation methodology, demonstrating that the prevalence process is a result of two distinct processes: incidence and survival. `rprev` allows for custom specification of both of these systems, in addition to providing default implementations that work well in many situations. This vignette acts as a guide to assessing the modelling assumptions made when using these default models, including the use of diagnostic functions provided with `rprev`. 
 
-First, we will inspect the consistency of incidence data between years of the registry and determine if it can be appropriately modelled as an homogeneous Poisson process. Second, we will look at the consistency of the survival data between years of the registry and check the adequacy of a parametric model of survival. We emphasise that the user should check that their registry data does meet the required assumptions and if not, should understand that estimates of prevalence made using simulation based on that data may not be correct.
+First, we will inspect the consistency of incidence data across the range of the registry and determine if it can be appropriately modelled as an homogeneous Poisson process. Second, we will look at verifying assumptions made when using a parametric model of survival. We emphasise that **the user should check that their registry data does meet the required assumptions and if not, should understand that estimates of prevalence made using simulation based on that data may not be correct**.
 
 ```{r setup, message = FALSE, warning = FALSE, echo=F}
 library(rprev)
 library(survival)
+library(ggplot2)
 data(prevsim)
 ```
 
 # Incidence
 
-The simulation of incident cases in the years for which registry data is not available currently assumes that the incidence process is homogeneous Poisson. The package includes several functions for inspecting the incidence data, as well as diagnosing the validity of this assumption.
+The simulation of incident cases in the years for which registry data is not available currently assumes that the incidence process is homogeneous Poisson. `test_homogeneity` calculates several summary statistics of the disease incidence to identify the suitability of this model, including fitting a smoothed function to the annual incidence data.
 
-The primary function is `incidence`, which calculates several summary statistics of the disease incidence. It requires a vector of entry dates into the registry, along with the size of the population under consideration. The registry under interest can be subset to only count incident cases from specific years of interest, useful if there are doubts about the accuracy of the data, for example during the first year of operation. This function also fits a spline smooth to the incidence rate data.
-
-```{r}
-inc <- incidence(prevsim$entrydate, population_size=3.2e6, start='2005-09-01', num_reg_years=5)
-```
-
-This function returns an S3 object of class `incidence` with the following attributes.
+It requires a vector of entry dates into the registry, with other information about the registry being passed in to optional arguments (see `?test_homogeneity` for details). For example, the `population_size` parameter below allows for relative incidence rates to be calculated, while `truncate_end` removes diagnoses from the last calendar year of the registry (2013) as it only has 1 month of incidence data.
 
 ```{r}
-inc
-names(inc)
+inc <- test_homogeneity(prevsim$entrydate,
+                        population_size=3.2e6,
+                        truncate_end=TRUE)
 ```
 
-The `summary.incidence` method displays the most useful information about the incidence process of the disease of interest.
+The `summary` method displays the most useful information about the incidence process of the disease of interest.
 
 ```{r}
 summary(inc)
 ```
 
-The known yearly incidence rates are displayed starting at `start` date for `num_reg_years`, starting with the first year. For the simulated data set `prevsim`, there were 96 incident cases between 2005-09-01 and 2006-09-01. It can be concluded that the disease has around 100 new cases each year.
+The known yearly incidence rates are displayed starting at the the day and month specified in `year_start`, which defaults to "01-01", in the first registry year. This is 2013-01-01 for `prevsim`, so there were 91 incident cases between 2003-01-01 and 2004-01-01. It can be concluded that the disease has around 100 new cases each year.
 
 Below that is a summary of the cumulative diagnosis times (in days), useful as a quick check of the distribution of incident cases. The p-values of a simulation test indicating whether the yearly incidence estimates are under or over dispersed relative to a homogeneous Poisson process are also displayed. Inspection of the smoothed incidence function should reveal whether the problem is one of non-homogeneity (which may lead to inaccurate prevalence estimates) or of failure of the Poisson assumption (which may lead to inaccurate estimates of confidence intervals). 
-
-Another useful incidence statistic is the mean incidence rate per 100,000 within the study population, which is obtained from the `mean` attribute. Confidence intervals are provided at the specified level (default is 95%):
+Another useful incidence statistic is the mean annual incidence rate per 100,000 within the study population, which is obtained from the `mean` attribute. Confidence intervals are provided at the specified level (default is 95%):
   
 ```{r incidencerate, error = TRUE}
 inc$mean
@@ -57,22 +52,25 @@ inc$mean
 
 Alongside the p-values from the over/under dispersion test, `rprev` provides visual tools to assess the consistency of the incidence data with an homogeneous Poisson process.
 
-`plot.incidence` displays a plot of the actual incidence rate as recorded in the registry, with the smooth overlaid. If incidence is an homogeneous Poisson process, both the smooth (green) and incidence process (red) should remain within the 95% confidence interval (dashed blue) and be evenly distributed about the mean (blue line). 
+The `plot` method displays a plot of the actual incidence rate as recorded in the registry, with the smooth overlaid. If incidence is an homogeneous Poisson process, both the smooth (green) and incidence process (red) should remain within the 95% confidence interval (dashed blue) and be evenly distributed about the mean (blue line). 
 
 ```{r, fig.width = 7, fig.height = 4}
 plot(inc)
 ```
 
-Another function used to describe the incident cases is `incidence_age_distribution`, which simply plots the distribution of incident cases by age.
+Another useful diagnostic is to look at the age distribution of the incident cases.
 
 ```{r incidenceage, fig.width = 7, fig.height = 4, error = TRUE}
-incidence_age_distribution(prevsim$age)
+ggplot(prevsim, aes(age, y=..count..)) +
+    geom_line(stat='density') +
+    xlim(0, 100) +
+    labs(x='Age (years)', y='Number incident cases') +
+    theme_bw()
 ```
-
 
 # Survival modelling
 
-The second component to the prevalence estimation is the survival modelling process. In the default implementation, survival is modelled using a parametric fit. It is recommended that the user inspects the survival data for consistency with the assumptions of this model and for homogeneity. In this example, we'll use the `prevsim` data set and test the assumptions of a Weibull model acting on the sex and age covariates, since these are common demographic factors that are likely to be used in prevalence estimation.
+In the default implementation, survival is modelled using a parametric fit with a specified distribution. It is **highly** recommended that the user inspects this model to assess its suitability. In this example, we'll use the `prevsim` data set and test the assumptions of a Weibull model acting on the sex and age covariates, since these are common demographic factors that are likely to be used in prevalence estimation.
 
 First, it is always useful to plot the Kaplan-Meier estimator of the data, both as a whole and stratified by age to visually inspect for any inconsistencies:
 
@@ -127,10 +125,36 @@ cox.zph(cx)
 
 ## Functional form of age
 
-`functional_form_age()` is provided so that the user can further investigate if modelling the effect of age as linear is appropriate. This function fits a Cox model to the data with a restricted cubic spline with the specified degrees of freedom. The model is returned by the function as an `rms::cph object`, allowing the user to inspect the fit. The function can also plot relative hazard as a function of age with the `plot_fit` argument.
+Often, it can be a rather tenuous assumption that age has a linear effect on log-hazard. We recommend investigating whether a non-linear functional form provides a more appropriate fit. In particular, the `rms` package provides the `cph` function to fit a Cox model, to which restricted cubic splines can be placed on covariates using `rcs` as demonstrated below. Plotting log hazard as a function of age provides a visual means of assesing model fit, to be used alongside inspection of the model coefficients.
 
-```{r ageform2, fig.width = 7, fig.height = 4, error = TRUE}
-functional_form_age(Surv(time, status) ~ age, prevsim, df=4, plot_fit=T)
+```{r ageform3, warning=F, message=F, fig.width = 7, fig.height = 4, error = TRUE}
+library(rms)
+library(dplyr)
+
+mod_spline <- cph(Surv(time, status) ~ rcs(age, df=4), prevsim, x=TRUE, y=TRUE, surv=TRUE, time.inc=1)
+
+# Calculates log hazard linear predictor at 100 linearly separated ages between the limits
+# in the registr data
+age_range <- seq(min(prevsim$age), max(prevsim$age), length.out=100)
+preds <- predict(mod_spline, newdata=age_range, se.fit=T)
+preds_df <- as.data.frame(preds) %>%
+                rename(lp=linear.predictors, se=se.fit) %>%
+                mutate(age = age_range,
+                       upper = lp + 2 * se,
+                       lower = lp - 2 * se)
+
+ggplot(preds_df, aes(x=age, y=lp)) +
+    geom_ribbon(aes(ymin=lower, ymax=upper),
+                     colour='#d2d2d2', alpha=0.30) +
+    geom_line(colour='#0080ff', size=1.2) +
+    theme_bw() +
+    labs(x='Age', y='Log relative hazard')
+```
+
+For example, in this situation there isn't enough evidence to suggest a non-linear effect provides a better model fit over just a linear relationship.
+
+```{r}
+mod_spline
 ```
 
 # Prevalence estimates
