--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
   - Parallelise main simulation loop
-  - Have predict_survival_probability.survregmin not require factors to manually have their original levels added
+  - Speed up predict_survival_probability.fixedcure
 
