--- a/vignettes/diagnostics.Rmd
+++ b/vignettes/diagnostics.Rmd
@@ -195,11 +195,10 @@ We do not provide any functions for diagnosing the bootstrapped incidence models
 
 ## Diagnosing survival models
 
-To inspect the distribution of the bootstrapped survival models [see @crouch2014determining for details], a `survfit.prev` object can be constructed using the usual `survfit` call, accepting a data frame of new data. In the example below, survival probability is estimated for a 60 year old male:
+To inspect the distribution of the bootstrapped survival models [see @crouch2014determining for details], a `survfit.prev` object can be constructed using the usual `survfit` call, accepting a data frame of new data, defaulting to the average covariate values in the registry data. In the example below, survival probability is estimated for a 60 year old male:
 
 ```{r}
-prevsurv <- survfit(prevalence_total, 
-                    newdata=data.frame(age=60, sex=factor('M', levels=levels(prevsim$sex))))
+prevsurv <- survfit(prevalence_total, newdata=data.frame(age=60, sex='M'))
 prevsurv
 ```
 
